# Free86

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md  bootstrap.asm  bootstrap.lst  test386-EE-reference.diff  test386-EE-reference.txt
Sources/Free86/: ControlRegister.swift  DataTypes.swift  DirectMemory.swift  Exception+Interrupt.swift  ExtendedFlags.swift  ExtendedFlagsRegister.swift  Free86+DirectMemory.swift  Free86+Fedex.swift  Free86+OneByteOpcode16Programs.swift  Free86+OneByteOpcodePrograms.swift  Free86+PagedMemory.swift  Free86+TranslationLookasideBuffer.swift  Free86+TwoByteOpcode16Programs.swift  Free86+TwoByteOpcodePrograms.swift  Free86+eflags.swift  Free86+fetchDecodeExecute.swift  Free86+obtainOpcode.swift  Free86+reset.swift  Free86+retrieveOpcode.swift  Free86+segmentRegister.swift  Free86+segmentTranslation.swift  Free86+segmentation.swift  Free86+setSegmentRegister.swift  Free86+setter.swift  Free86.swift  GeneralRegister.swift  Instruction+OneByteOpcodePrograms.swift  Instruction+TwoByteOpcodePrograms.swift  Instruction.swift  InstructionPrefixRegister.swift  Interrupt+Exception.swift  InterruptsInFlightRegister.swift  LinearAddress.swift  LogicalAddress+Pointers.swift  LogicalAddress.swift  MachineDataTypes.swift  MemoryIO+DirectMemory.swift  MemoryIO+PagedMemory.swift  MemoryIO+PhysicalAddress.swift  ModRM+SIB.swift  (+13 more)
Sources/Free86/AuxiliaryPrograms/: Free86+binaryArithmethic.swift  Free86+binaryArithmetic.swift  Free86+bitShiftTestRotate.swift  Free86+controlTransfer.swift  Free86+dataMovement.swift  Free86+decimalArithmethic.swift  Free86+decimalArithmetic.swift  Free86+miscellaneous.swift  Free86+stringManipulation.swift
Sources/Free86/LookupTables/: Free86+LUT.swift
Sources/Free86/OpcodePrograms/: Free86+oneByte.swift  Free86+oneByte16.swift  Free86+twoByte.swift  Free86+twoByte16.swift  Instruction+oneByte.swift  Instruction+twoByte.swift
Sources/linos/: NanoPC.swift  main.swift
Sources/test386/: main.swift
Sources/testINT/: main.swift  testINT.asm
Tests/suite/: ControlRegister.swift  DataTypes.swift  DirectMemory.swift  Exception+Interrupt.swift  ExtendedFlags.swift  ExtendedFlagsRegister.swift  Free86+DirectMemory.swift  Free86+PagedMemory.swift  Free86+SSB.swift  Free86+TranslationLookasideBuffer.swift  Free86+reset.swift  Free86+setter.swift  GeneralRegister.swift  InstructionPrefixRegister.swift  InterruptsInFlightRegister.swift  LinearAddress.swift  MachineDataTypes.swift  MemoryIO+DirectMemory.swift  MemoryIO+PagedMemory.swift  MemoryIO+PhysicalAddress.swift  ModRM+SIB.swift  Opcode.swift  PageTableEntry.swift  Pin.swift  PinIO.swift  SegmentDescriptor.swift  SegmentRegister.swift  SegmentSelector.swift
src/: CMOS.h  CPU.h  KBD.h  PC.cpp  PC.h  Test386.h  eflags.cpp  free86.cpp  free86.h  main.cpp  ringbuffer.h
src/exe/: PC.cpp  PC.h  Test386.h
src/lib/: free86.cpp  memory.cpp  string.cpp
src/x86/: eflags.cpp  fedex.cpp  free86.cpp  free86.h  memory.cpp  string.cpp  x86.cpp  x86.h  x86flg.cpp  x86mem.cpp  x86opcode.cpp  x86str.cpp
